WP-8611 voices details page related section alignment issue fixes

--- a/sass/conditionals/voices-detail.sass
+++ b/sass/conditionals/voices-detail.sass
@@ -593,7 +593,6 @@
         .field-related-programs-wrapper
           .field-related-programs
             border-bottom: 1px solid lightgray
-            padding: 15px 26px
             .view-mode-idea_story_related
               padding: 18px 26px 10px 26px
           .label-above
